<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customGreen1"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp"
            tools:ignore="InefficientWeight">

            <ImageButton
                android:id="@+id/next"
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/vault_add_c"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add"
                app:layout_constraintBottom_toBottomOf="@+id/textView19"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.45999998" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/notes_avd_b"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/next"
                app:layout_constraintRight_toRightOf="@+id/next"
                app:layout_constraintTop_toBottomOf="@+id/next" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/notes_avd_c"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="@+id/textView24"
                app:layout_constraintRight_toRightOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/textView24"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/notes_avd_d"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/textView27"
                app:layout_constraintRight_toRightOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/click_to_open"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="@+id/textView5"
                app:layout_constraintRight_toRightOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="RtlHardcoded" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>
