<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">


            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/vault_show_content"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintLeft_toLeftOf="@+id/vault_view_vault"
                app:layout_constraintRight_toRightOf="@+id/vault_view_vault"
                app:layout_constraintTop_toBottomOf="@+id/vault_view_vault"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/vault_view_vault"
                android:layout_width="120dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/downloaded_image_resource"
                android:scaleType="centerCrop"
                android:src="@drawable/view"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.62" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_open"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/textView18"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="@+id/textView18"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.5" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>
