<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vault_add_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customGreen1"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp"
            tools:ignore="InefficientWeight">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/vault_done"
                android:layout_width="59dp"
                android:layout_height="59dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                app:backgroundTint="@android:color/holo_purple"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vault_description"
                app:srcCompat="@drawable/next"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/vault_uname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="55dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/vault_add_activity_a"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vault_uname2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/vault_add_activity_b"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vault_uname1" />

            <EditText
                android:id="@+id/vault_pwd1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/vault_add_activity_c"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vault_uname2" />

            <EditText
                android:id="@+id/vault_pwd2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/vault_add_activity_b"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vault_pwd1" />

            <EditText
                android:id="@+id/vault_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/vault_add_activity_d"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vault_pwd2" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>
